@@ -15,25 +15,24 @@ import org.ruyisdk.core.ruyi.model.SystemInfo;
 import org.ruyisdk.ruyi.util.RuyiFileUtils;
 
 public class RuyiManager {
-    
+
     public static boolean isRuyiInstalled() {
         try {
-            Process process = new ProcessBuilder(RuyiFileUtils.getInstallPath()+"/ruyi", "-V").start();
-//        	 Process process = Runtime.getRuntime().exec(RuyiFileUtils.getInstallPath()+"/ruyi -V");
+            Process process = new ProcessBuilder(RuyiFileUtils.getInstallPath() + "/ruyi", "-V").start();
+            // Process process = Runtime.getRuntime().exec(RuyiFileUtils.getInstallPath()+"/ruyi -V");
             return process.waitFor() == 0;
         } catch (IOException | InterruptedException e) {
-        	e.printStackTrace();
+            e.printStackTrace();
             return false;
         }
     }
-    
+
     public static RuyiVersion getInstalledVersion() {
         try {
-            Process process = new ProcessBuilder(RuyiFileUtils.getInstallPath()+"/ruyi", "-V").start();
-            
-            try (BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(process.getInputStream()))) {
-                
+            Process process = new ProcessBuilder(RuyiFileUtils.getInstallPath() + "/ruyi", "-V").start();
+
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+
                 // 仅读取首行内容
                 String firstLine = reader.readLine();
                 if (firstLine == null) {
@@ -44,9 +43,7 @@ public class RuyiManager {
                 String prefix = "Ruyi ";
                 if (firstLine.startsWith(prefix)) {
                     // 截断字符串并清理首尾空格
-                    String versionStr = firstLine
-                        .substring(prefix.length())
-                        .trim();
+                    String versionStr = firstLine.substring(prefix.length()).trim();
 
                     // 正则校验版本号格式（如0.31.0）
                     if (versionStr.matches("^\\d+\\.\\d+\\.\\d+$")) {
@@ -59,60 +56,60 @@ public class RuyiManager {
         }
         return null;
     }
-        
-    public static RuyiVersion getLatestVersion(){
-    	String archSuffix = SystemInfo.detectArchitecture().getSuffix();
-    	RuyiVersion version  = null;
-		try {
-			RuyiReleaseInfo info = RuyiAPI.getLatestRelease(archSuffix);
-			version  = info.getVersion();
-		} catch (Exception e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
+
+    public static RuyiVersion getLatestVersion() {
+        String archSuffix = SystemInfo.detectArchitecture().getSuffix();
+        RuyiVersion version = null;
+        try {
+            RuyiReleaseInfo info = RuyiAPI.getLatestRelease(archSuffix);
+            version = info.getVersion();
+        } catch (Exception e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
         return version;
     }
-    
-//    //此方法无法获取网页信息
-//    public static RuyiVersion getLatestVersion1() {
-//        try {
-//            URL url = new URL(Constants.NetAddress.MIRROR_RUYI_RELEASES);
-//            System.out.print(url);
-//            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-//            conn.setRequestMethod("GET");
-//            System.out.print(conn.getResponseCode());
-//            
-//         // 处理非 200 状态码
-//            if (conn.getResponseCode() != 200) {
-//                System.err.println("HTTP 错误码: " + conn.getResponseCode());
-//                return null;
-//            }
-//            try (BufferedReader reader = new BufferedReader(
-//                new InputStreamReader(conn.getInputStream()))) {
-//                String line;
-//                RuyiVersion maxVersion = new RuyiVersion(0, 0, 0);
-//                
-//                while ((line = reader.readLine()) != null) {
-//                    Matcher matcher = Pattern.compile("href=\"(\\d+\\.\\d+\\.\\d+)/\"").matcher(line);
-//                    if (matcher.find()) {
-//                        String versionStr = matcher.group(1);
-//                        try {
-//                            RuyiVersion current = RuyiVersion.parse(versionStr);
-//                            if (current.compareTo(maxVersion) > 0) {
-//                                maxVersion = current;
-//                            }
-//                        } catch (IllegalArgumentException e) {
-//                            // 忽略格式不正确的版本号
-//                            System.err.println("忽略无效版本号: " + versionStr);
-//                        }
-//                    }
-//                }
-//                
-//                return maxVersion;
-//            }
-//        } catch (IOException e) {
-//            System.err.println("获取最新版本失败: " + e.getMessage());
-//            return null;
-//        }
-//    }    
+
+    // //此方法无法获取网页信息
+    // public static RuyiVersion getLatestVersion1() {
+    // try {
+    // URL url = new URL(Constants.NetAddress.MIRROR_RUYI_RELEASES);
+    // System.out.print(url);
+    // HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+    // conn.setRequestMethod("GET");
+    // System.out.print(conn.getResponseCode());
+    //
+    // // 处理非 200 状态码
+    // if (conn.getResponseCode() != 200) {
+    // System.err.println("HTTP 错误码: " + conn.getResponseCode());
+    // return null;
+    // }
+    // try (BufferedReader reader = new BufferedReader(
+    // new InputStreamReader(conn.getInputStream()))) {
+    // String line;
+    // RuyiVersion maxVersion = new RuyiVersion(0, 0, 0);
+    //
+    // while ((line = reader.readLine()) != null) {
+    // Matcher matcher = Pattern.compile("href=\"(\\d+\\.\\d+\\.\\d+)/\"").matcher(line);
+    // if (matcher.find()) {
+    // String versionStr = matcher.group(1);
+    // try {
+    // RuyiVersion current = RuyiVersion.parse(versionStr);
+    // if (current.compareTo(maxVersion) > 0) {
+    // maxVersion = current;
+    // }
+    // } catch (IllegalArgumentException e) {
+    // // 忽略格式不正确的版本号
+    // System.err.println("忽略无效版本号: " + versionStr);
+    // }
+    // }
+    // }
+    //
+    // return maxVersion;
+    // }
+    // } catch (IOException e) {
+    // System.err.println("获取最新版本失败: " + e.getMessage());
+    // return null;
+    // }
+    // }
 }
